# idm-open

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  README.md  test.sh
.github/workflows/: android-apk.yml  android-e2e.yml  tests.yml
android/: README.md
android/wrapper/app/src/main/: AndroidManifest.xml
android/wrapper/app/src/main/java/com/idmopen/: DownloadForegroundService.kt  MainActivity.kt
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core-ffi/: Cargo.toml
core-ffi/src/: lib.rs
core/src/: checksum.rs  config.rs  engine.rs  error.rs  hls.rs  lib.rs  net.rs  queue.rs  resolver.rs  scheduler.rs  segment.rs  storage.rs  task.rs  tests.rs  throttle.rs  torrent.rs
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: architecture.md  db_schema.md  mega_sdk.md  roadmap.md  roadmap_1dm_plus.md  specification_sdm.md  state_machine.md
extensions/: README.md  install_native_host.sh
extensions/chrome/: manifest.json  options.js
extensions/firefox/: background.js  manifest.json  options.html
extensions/native-host/: Cargo.toml  com.idmopen.native.firefox.json  com.idmopen.native.json
extensions/native-host/src/: main.rs
scripts/: README.md  package-linux.sh  package-windows.ps1  prepare-android.sh
services/: README.md  idm-open.service  termux-daemon-stop.sh  termux-daemon.sh  termux-profile.sh
ui/: README.md  pubspec.yaml
ui/integration_test/: app_test.dart
ui/lib/: main.dart
ui/lib/ffi/: idm_ffi.dart
ui/lib/models/: task.dart
ui/lib/screens/: browser.dart
