[package]
name = "idm-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
m3u8-rs = "5.0"
url = "2.4"
lava_torrent = "0.5"
